--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
       text-align: center;
     }
 
-    a,
-    a:visited {
+    a, a:visited {
       color: #3f5dff;
     }
 
@@ -24,9 +23,7 @@
       margin-left: 10px;
     }
 
-    a:hover,
-    a:focus,
-    a:active {
+    a:hover, a:focus, a:active {
       color: #001956;
     }
 
@@ -61,14 +58,11 @@
         color: white;
       }
 
-      a,
-      a:visited {
+      a, a:visited {
         color: #4990e2;
       }
 
-      a:hover,
-      a:focus,
-      a:active {
+      a:hover, a:focus, a:active {
         color: #2b78ff;
       }
     }
@@ -78,7 +72,7 @@
 <body>
   <div class="info">
     <h1>user-management-smiels</h1>
-    <p>Version 0.0.1</p>
+    <p>Version 1.0.0</p>
 
     <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
     <h3>API Explorer: <a href="/explorer">/explorer</a></h3>
